--- a/date/2024-08/index.htm
+++ b/date/2024-08/index.htm
@@ -271,8 +271,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-9-12-free-high-speed-nodes.htm">9月12日更新20.3M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、新加坡、香港、美国、欧洲、加拿大、韩国等地区,最高速度可达20.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-2-27-free-clash.htm">2月27日22.7M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了日本、加拿大、韩国、美国、新加坡、香港、欧洲等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -281,8 +281,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-10-clash-windows.htm">10月10日更新21.7M/S，2024年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、欧洲、新加坡、日本、香港、加拿大等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-2-17-free-node-subscribe.htm">2月17日18M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了香港、加拿大、新加坡、美国、韩国、欧洲、日本等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -291,8 +291,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-2-21-node-share-links.htm">2月21日19.4M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、新加坡、香港、日本、欧洲、加拿大等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-8-12-clash-windows.htm">8月12日更新21.4M/S，2024年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、日本、美国、加拿大、新加坡、香港、韩国等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -301,8 +301,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-9-1-shadowrocket-node.htm">9月1日更新22.8M/S，2024年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、加拿大、香港、新加坡、欧洲、日本等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-3-31-free-clash-subscribe.htm">3月31日更新19.1M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点</a></h4>
+                <p>这一次的节点更新覆盖了美国、韩国、欧洲、日本、香港、加拿大、新加坡等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -311,8 +311,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-4-1-free-ssr-node.htm">4月1日更新23M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、欧洲、香港、韩国、加拿大、日本、美国等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-11-19-free-v2ray.htm">11月19日更新20.4M/S，2024年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、新加坡、韩国、欧洲、日本、美国、香港等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -321,8 +321,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-8-27-free-subscribe-node.htm">8月27日更新18.3M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、美国、韩国、日本、加拿大、香港、欧洲等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-5-14-free-v2ray.htm">5月14日更新18.7M/S，2024年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、新加坡、日本、韩国、美国、欧洲、香港等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -331,8 +331,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-7-19-free-node-subscribe.htm">7月19日更新19.9M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、新加坡、香港、韩国、欧洲、加拿大、日本等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-9-22-free-v2ray.htm">9月22日更新20.4M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、加拿大、美国、日本、韩国、欧洲、新加坡等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -341,8 +341,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-7-20-free-high-speed-nodes.htm">7月20日更新19.1M/S，2024年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、新加坡、日本、加拿大、美国、欧洲、香港等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-2-14-free-ssr-node.htm">2月14日19.8M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了香港、韩国、新加坡、欧洲、加拿大、美国、日本等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -351,8 +351,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-9-6-free-ssr-subscribe.htm">9月6日更新20.4M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、香港、新加坡、加拿大、韩国、日本、美国等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-3-3-clash-node.htm">3月3日19.2M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了香港、日本、新加坡、欧洲、加拿大、韩国、美国等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -361,8 +361,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-5-free-node-subscribe-links.htm">10月5日更新22.3M/S，2024年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、美国、日本、香港、新加坡、加拿大、韩国等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-7-27-free-clash-subscribe.htm">7月27日更新22.5M/S，2024年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、美国、韩国、加拿大、新加坡、日本、香港等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -373,7 +373,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-08/" title="2024-08 归档">2024-08</a></h4>
