--- a/date/2024-11/index.htm
+++ b/date/2024-11/index.htm
@@ -92,6 +92,23 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2024-11-28">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2024-11-28-clash-windows.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/8a5a27c189a802d655c0f68ddaa2713f.webp" alt="11月28日更新19M/S，2024年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点订阅" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2024-11-28-clash-windows.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">11月28日更新19M/S，2024年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点订阅</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了欧洲、香港、日本、新加坡、美国、加拿大、韩国等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                11月28日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2024-11-27">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -245,23 +262,6 @@
                                 11月19日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2024-11-18">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2024-11-18-node-share.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/7caaec5e02bb1ce363bb9268b81306bf.webp" alt="11月18日更新18.3M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2024-11-18-node-share.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">11月18日更新18.3M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了加拿大、韩国、美国、日本、欧洲、香港、新加坡等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                11月18日                            </p>
-                        </div>
-                    </div>
                                     </div>
 
                 <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2024-11/page-2.htm">2</a></li><li><a href="/date/2024-11/page-3.htm">3</a></li> <li><a href="/date/2024-11/page-2.htm">&raquo;</a></li></ul>            </div>
@@ -271,8 +271,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-24-free-shadowrocket-node.htm">11月24日更新18.5M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、韩国、新加坡、欧洲、香港、日本、加拿大等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-6-clash-windows.htm">10月6日更新20.8M/S，2024年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、欧洲、香港、美国、加拿大、韩国、日本等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -281,8 +281,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-19-free-ssr-node.htm">10月19日更新18.3M/S，2024年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、新加坡、日本、加拿大、香港、韩国、美国等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-3-8-free-v2ray.htm">3月8日20.3M/S|SSR/Shadowrocket/Clash/V2ray免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了香港、日本、美国、欧洲、加拿大、新加坡、韩国等地区,最高速度可达20.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -291,8 +291,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-9-13-free-node-subscribe.htm">9月13日更新21M/S，2024年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、日本、韩国、香港、新加坡、加拿大、美国等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-8-8-free-node-subscribe.htm">8月8日更新20.2M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了韩国、香港、欧洲、日本、美国、加拿大、新加坡等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -301,8 +301,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-2-24-clash-node.htm">2月24日22.3M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、日本、新加坡、美国、欧洲、香港、韩国等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-7-15-free-v2ray.htm">7月15日更新20.6M/S，2024年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、新加坡、美国、日本、韩国、加拿大、香港等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -311,8 +311,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-7-16-free-node-subscribe-links.htm">7月16日更新19.8M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、香港、新加坡、美国、欧洲、韩国、日本等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-4-6-shadowrocket-node.htm">4月6日更新20.7M/S，2024年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点</a></h4>
+                <p>这一次的节点更新覆盖了日本、韩国、加拿大、欧洲、香港、美国、新加坡等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -321,8 +321,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-9-3-free-v2ray.htm">9月3日更新21.7M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、欧洲、日本、美国、加拿大、新加坡、香港等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-11-13-clash-node.htm">11月13日更新22.4M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、欧洲、加拿大、美国、韩国、日本等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -331,8 +331,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-9-26-free-v2ray.htm">9月26日更新22.8M/S，2024年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、日本、美国、加拿大、香港、欧洲、新加坡等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-3-2-free-ssr-node.htm">3月2日21M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、加拿大、韩国、欧洲、香港、美国、日本等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -341,8 +341,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-5-17-clash-node.htm">5月17日更新21.2M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、加拿大、香港、新加坡、欧洲、美国、韩国等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-6-7-clash-node.htm">6月7日更新22.3M/S，2024年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、韩国、新加坡、香港、美国、加拿大、欧洲等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -351,8 +351,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-9-19-free-high-speed-nodes.htm">9月19日更新22M/S，2024年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、加拿大、欧洲、日本、新加坡、香港等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-4-28-shadowrocket-node.htm">4月28日更新22.4M/S，2024年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、韩国、日本、美国、欧洲、香港、新加坡等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -361,8 +361,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-8-23-free-subscribe-node.htm">8月23日更新21.8M/S，2024年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、韩国、美国、香港、新加坡、加拿大、欧洲等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-9-7-free-clash.htm">9月7日更新23M/S，2024年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、香港、日本、韩国、新加坡、加拿大、欧洲等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -373,7 +373,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-08/" title="2024-08 归档">2024-08</a></h4>
