--- a/free-nodes/page-4.htm
+++ b/free-nodes/page-4.htm
@@ -90,6 +90,23 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2024-10-29">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2024-10-29-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/830880c859159c166b79b0f24c26ce86.webp" alt="10月29日更新19.6M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2024-10-29-free-v2ray.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">10月29日更新19.6M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了新加坡、香港、加拿大、美国、日本、韩国、欧洲等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                10月29日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2024-10-28">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -243,23 +260,6 @@
                                 10月20日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2024-10-19">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2024-10-19-free-ssr-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/617a204e85c6866d8bf813a7b5c311bb.webp" alt="10月19日更新18.3M/S，2024年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点订阅" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2024-10-19-free-ssr-node.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">10月19日更新18.3M/S，2024年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点订阅</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了欧洲、新加坡、日本、加拿大、香港、韩国、美国等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                10月19日                            </p>
-                        </div>
-                    </div>
                                     </div>
 
                 <ul class="pagination"><li><a href="/free-nodes/page-3.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li class="active"><span>4</span></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li><a href="/free-nodes/page-8.htm">8</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-28.htm">28</a></li><li><a href="/free-nodes/page-29.htm">29</a></li> <li><a href="/free-nodes/page-5.htm">&raquo;</a></li></ul>            </div>
@@ -269,8 +269,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-5-6-clash-node.htm">5月6日更新22.3M/S，2024年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、欧洲、新加坡、美国、香港、韩国、日本等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-9-22-free-v2ray.htm">9月22日更新20.4M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、加拿大、美国、日本、韩国、欧洲、新加坡等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -279,8 +279,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-5-16-free-shadowrocket-node.htm">5月16日更新21.5M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、韩国、新加坡、美国、加拿大、日本、香港等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-4-12-free-high-speed-nodes.htm">4月12日更新20.9M/S，2024年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点</a></h4>
+                <p>这一次的节点更新覆盖了日本、新加坡、韩国、欧洲、香港、美国、加拿大等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -289,8 +289,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-9-28-free-node-subscribe.htm">9月28日更新22.3M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、欧洲、新加坡、香港、美国、日本、韩国等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-4-26-free-v2ray-subscribe.htm">4月26日更新18.1M/S，2024年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点</a></h4>
+                <p>这一次的节点更新覆盖了美国、加拿大、新加坡、欧洲、日本、韩国、香港等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -299,8 +299,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-5-20-clash-windows.htm">5月20日更新18.6M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、韩国、香港、日本、美国、加拿大、欧洲等地区,最高速度可达18.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-2-15-node-share-links.htm">2月15日20.1M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、美国、日本、韩国、加拿大、欧洲等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -309,8 +309,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-4-20-free-node-subscribe-links.htm">4月20日更新19.1M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、美国、韩国、香港、新加坡、日本、加拿大等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-9-15-clash-node.htm">9月15日更新19M/S，2024年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、新加坡、美国、日本、韩国、欧洲、香港等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -319,8 +319,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-13-clash-node.htm">11月13日更新22.4M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了香港、新加坡、欧洲、加拿大、美国、韩国、日本等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-5-22-free-ssr-subscribe.htm">5月22日更新21.5M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、欧洲、日本、加拿大、香港、韩国、美国等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -329,8 +329,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-6-21-free-high-speed-nodes.htm">6月21日更新20.9M/S，2024年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、加拿大、美国、香港、新加坡、日本、欧洲等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-11-free-subscribe-node.htm">10月11日更新21.6M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、加拿大、美国、日本、新加坡、欧洲、韩国等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -339,8 +339,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-7-22-clash-v2ray-ss-ssr.htm">7月22日更新19.4M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、欧洲、香港、韩国、新加坡、美国、日本等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-6-11-free-shadowrocket-node.htm">6月11日更新22.6M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、美国、香港、加拿大、欧洲、韩国、日本等地区,最高速度可达22.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -349,8 +349,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-3-23-node-share-links.htm">3月23日更新19.1M/S，2024年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、新加坡、加拿大、欧洲、香港、日本等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-11-3-free-clash-subscribe.htm">11月3日更新19.7M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、韩国、香港、美国、新加坡、日本、加拿大等地区,最高速度可达19.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -359,8 +359,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-8-19-clash-v2ray-ss-ssr.htm">8月19日更新21.7M/S，2024年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、欧洲、加拿大、美国、香港、新加坡、韩国等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-8-10-free-ssr-subscribe.htm">8月10日更新22.9M/S，2024年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、欧洲、韩国、美国、日本、加拿大、新加坡等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -371,7 +371,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-08/" title="2024-08 归档">2024-08</a></h4>
